# kf6api-py

./: .gitignore  README.md  pyproject.toml
src/kf6api_py/: __init__.py
src/kf6api_python_jerrisonchang/: api.py
src/kf6py/: __init__.py  api.py
tests/: test.py
