[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kf6py"
dependencies = [
    'requests >=2.28, <3',
    'beautifulsoup4 >=4, <5',
]
version = "0.2.2"

authors = [
    { name="Jerrison Chang-Sundin", email="chunyen.cs@gmail.com"}
]

description = "A small tool for calling APIs in Knowledge Forum"

readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JerrisonChang/kf6api-py"
"Bug Tracker" = "https://github.com/JerrisonChang/kf6api-py/issues"